--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "helios",
   "version": "0.0.1",
+  "scripts":{
+    "start":"echo\"open localhost:3000/\" -d"
+  },
   "dependencies": {
     "express": "^4.13.0",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "three": "^0.71.0"
   },
   "description": "helios game project",
   "engines": {
