--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts":{
     "start": "supervisor server.js" 
   },
-  "main": "server.js",
   "dependencies": {
+    "socket.io" : "0.9.16",
+    "ws" : "0.4.31",
     "express": "^4.13.0",
     "path": "^0.11.14",
     "three": "^0.71.0"
   },
   "description": "helios game project",
   "engines": {
-    "node": ">=0.10.0"
-  }
+    "node": ">=0.10.0",
+    "npm": ">= 1.0.0"
+  },
+  "main": "server.js"
 }
