--- a/package.json
+++ b/package.json
@@ -7,18 +7,12 @@
     "watch": "watchify main.js -o bundle.js --debug --verbose"
   },
   "dependencies": {
-    "bn.js": "0.15.2",
     "browserify": "^11.2.0",
     "cords": "^1.0.2",
     "express": "^4.13.0",
-    "greedy-mesher": "^1.0.2",
-    "ndarray-pack": "^1.1.1",
     "path": "^0.11.14",
     "seedrandom": "^2.4.2",
-    "socket.io": "0.9.16",
-    "three": "^0.71.0",
-    "three-dev": "^0.72.0",
-    "ws": "0.4.31"
+    "three-dev": "^0.72.0"
   },
   "description": "helios game project",
   "engines": {
