--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "watch": "watchify main.js -o bundle.js --debug --verbose"
   },
   "dependencies": {
+    "angular": "^1.4.7",
+    "bootstrap": "^3.3.5",
     "browserify": "^11.2.0",
     "cords": "^1.0.2",
     "express": "^4.13.0",
