--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "node server.js",
-    "build": "browserify main.js -o bundle.js",
+    "build": "browserify -g uglifyify main.js | uglifyjs -o bundle.js",
     "watch": "watchify main.js -o bundle.js --debug --verbose"
   },
   "dependencies": {
@@ -12,9 +12,11 @@
     "browserify": "^11.2.0",
     "cords": "^1.0.2",
     "express": "^4.13.0",
-    "path": "^0.11.14",
+    "fs": "0.0.2",
     "seedrandom": "^2.4.2",
-    "three-dev": "^0.72.0"
+    "three-dev": "^0.72.0",
+    "uglify-js": "^2.5.0",
+    "uglifyify": "^3.0.1"
   },
   "description": "helios game project",
   "engines": {
