--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "start": "node server.js",
     "build": "browserify -g uglifyify main.js | uglifyjs -o bundle.js",
-    "watch": "watchify main.js -o bundle.js --debug --verbose"
+    "watch": "watchify main.js -o bundle.js"
   },
   "dependencies": {
     "angular": "^1.4.7",
     "bootstrap": "^3.3.5",
     "browserify": "^11.2.0",
+    "watchify": "latest",
     "cords": "^1.0.2",
     "express": "^4.13.0",
     "fs": "0.0.2",
