--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "angular": "^1.4.7",
     "bootstrap": "^3.3.5",
     "browserify": "^11.2.0",
-    "watchify": "latest",
     "cords": "^1.0.2",
     "express": "^4.13.0",
     "fs": "0.0.2",
     "seedrandom": "^2.4.2",
-    "three-dev": "^0.72.0",
+    "three": "^0.73.0",
+    "three-dev": "latest",
     "uglify-js": "^2.5.0",
-    "uglifyify": "^3.0.1"
+    "uglifyify": "^3.0.1",
+    "watchify": "latest"
   },
   "description": "helios game project",
   "engines": {
